web/app.css
body {
  font-family: sans-serif;
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  overflow: hidden;
  box-sizing: border-box; /* Add this to the body */
}

*, *::before, *::after {
  box-sizing: border-box; /* Apply to all elements */
}

h1,h2,h3 {
  margin:auto
}

.hidden {
  visibility: hidden;
}

.hbox-with-gap {
  display: flex;
  flex-direction: row;
  margin: 0px;
  padding: 0px;
  gap: 10px;
}


#container {
  display: flex;
  flex-direction: column;
  height: 100vh; 
  width: 100vw; 
  padding: 10px;
}

#toolbar{
  height: 50px;
  font-size: small;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;
  flex-shrink: 0; 
  z-index: var(--sl-z-index-dropdown);
}

.toolbar-content {
  max-height: 50px;
}

#editors {
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  margin: 0px;
  gap: 10px;
  width: 100%;
  height: 100%; 
  overflow: hidden; 
}

#pdf-viewer {
  width: 50%;
  border: 1px solid #ccc;
  position: relative;
  overflow: hidden;
}

iframe {
  width: 100%;
  height: 100%;
  border: none;
}

#xml-editor {
  width: 50%;
  border: 1px solid #ccc;
  display: flex; /* Use flexbox to manage codemirror-container height */
  flex-direction: column;
}

#codemirror-container {
  flex-grow: 1; /* Allow codemirror-container to take up all available height */
  height: 100%; /*Important, otherwise it won't work.*/
  overflow: scroll;
}

#status-bar {
  height: 15px;
  color: var(--sl-color-gray-500);
  flex-shrink: 0; /* Prevent status bar from shrinking */
}

/* Shoelace library */

:not(:defined) {
  visibility: hidden;
}

#toolbar sl-button::part(base) {
  margin-top: 5px;
}

#toolbar sl-button-group[label]:before {
  content: attr(label);
  position: absolute; /* Or relative, depending on your context */
  top: -8px;
  left: 0;
  color: var(--sl-color-gray-500);
  font-size: smaller; /* Optional: Adjust font size for the label */
  white-space: nowrap; /* Prevent wrapping */
  display: block; /*Crucial for positioning and showing the content*/
}

sl-dialog {
  --header-spacing: var(--sl-spacing-small);
  --body-spacing: var(--sl-spacing-small);
  --footer-spacing: var(--sl-spacing-small);
}

.dialog-big {
  --width: 75vw;
}

.dialog-column {
  display: flex; 
  flex-direction: column;
  gap: 10px;
}

.dialog-row {
  display: flex block; 
  flex-direction: row;
  gap: 10px;
}

#toolbar sl-select::part(form-control) {
  transform: translateY(-6px)
}

sl-select::part(form-control-label) {
  font-size: smaller;
  color: var(--sl-color-gray-500)
}

sl-select::part(display-input) {
  caret-color: transparent !important;
  font-size: smaller;
}

sl-select::part(listbox) {
  width: max-content;
}

sl-option::part(label), 
sl-menu-item::part(label) {
  font-size: smaller;
}

sl-button-group[label] {
  position: relative; /* To contain the absolute positioning of the :before pseudo-element */
}

